--- a/main.css
+++ b/main.css
@@ -23,3 +23,14 @@ body{
 .hyperlink{
 	text-align: center;
 }
+.quality{
+	text-align: right;
+	font-size: 26px;
+	padding-top: 0px;
+	padding-bottom: 0px:
+}
+.sub{
+ font-size: 40px;
+padding-top: 0px;
+padding-bottom: 0px;
+}
